--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -5,5 +5,10 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <% if(locals.id) { %>
+    <h2><%= id %></h2>
+    <% } else { %>
+    <h2>Categories List</h2>
+    <% } %>
   </body>
 </html>
