Add index, create, and update view skeletons

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -10,5 +10,6 @@
     <% } else { %>
     <h2>Categories List</h2>
     <% } %>
+    <a href="/categories/create">Add a new category</a>
   </body>
 </html>
