--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <a href="/categories">All Categories</a>
+    <a href="/items">All Items</a>
   </body>
 </html>
