--- a/views/updateItem.ejs
+++ b/views/updateItem.ejs
@@ -5,24 +5,30 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <form action="/items/create" method="POST">
+    <%- include('partials/errors.ejs') %>
+    <form action="/items/<%= item.id %>/update" method="POST">
       <div>
         <label for="name">Name:</label>
-        <input type="text" name="name" id="name" value="<%= item.name %>" />
+        <input
+          type="text"
+          name="name"
+          id="name"
+          value="<%= item.name %>"
+          required />
       </div>
       <div>
         <label for="description">Description:</label>
-        <textarea
-          name="description"
-          id="description"
-          value="<%= item.description %>"></textarea>
+        <textarea name="description" id="description" required>
+<%= item.description %></textarea
+        >
       </div>
       <div>
         <label for="manufacturer">Manufacturer:</label>
         <select
           name="manufacturer"
           id="manufacturer"
-          value="<%= item.manufacturer %>">
+          value="<%= item.manufacturer %>"
+          required>
           <!-- list manufacturers from db like the following-->
           <option value="manufacturer1">Manufacturer 1</option>
         </select>
@@ -42,7 +48,8 @@
           type="number"
           name="price"
           id="price"
-          value="<%= item.price %>" />
+          value="<%= item.price %>"
+          required />
       </div>
       <div>
         <label for="quantity">Quantity:</label>
@@ -50,7 +57,8 @@
           type="number"
           name="quantity"
           id="quantity"
-          value="<%= item.quantity %>" />
+          value="<%= item.quantity %>"
+          required />
       </div>
       <button type="submit">Submit</button>
     </form>
