Add update for categories and items

--- a/views/readCategory.ejs
+++ b/views/readCategory.ejs
@@ -13,5 +13,7 @@
       </li>
       <% }) %>
     </ul>
+    <a href="/categories/<%= category.id %>/update">Edit</a>
+    <a href="/categories/<%= category.id %>/delete">Delete</a>
   </body>
 </html>
