--- a/views/updateCategory.ejs
+++ b/views/updateCategory.ejs
@@ -13,7 +13,7 @@
           type="text"
           name="name"
           id="name"
-          value="<%= category.name %>"
+          value="<%= category.category %>"
           required />
       </div>
       <button type="submit">Submit</button>
