--- a/views/readCategory.ejs
+++ b/views/readCategory.ejs
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/style.css" />
-    <title><%= category.category %></title>
-  </head>
-  <body>
-    <h1><%= category.category %></h1>
-    <ul>
-      <% items.forEach(item => { %>
-      <li>
-        <a href="/items/<%= item.id %>"><%= item.item %></a>
-      </li>
-      <% }) %>
-    </ul>
-    <a href="/categories/<%= category.id %>/update">Edit</a>
-    <a href="/categories/<%= category.id %>/delete">Delete</a>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="/style.css" />
+  <title><%= category.category %></title>
+</head>
+
+<body>
+  <h1><%= category.category %></h1>
+  <ul>
+    <% items.forEach(item => { %>
+    <li>
+      <a href="/items/<%= item.id %>"><%= item.item %></a>
+    </li>
+    <% }) %>
+  </ul>
+  <a href="/categories/<%= category.id %>/update">Edit</a>
+  <form action="/categories/<%= category.id %>/delete" method="POST" style="display: inline;">
+    <button type="submit" onclick="return confirm('Are you sure you want to delete this category?')">Delete</button>
+  </form>
+</body>
+
 </html>
