--- a/views/readItem.ejs
+++ b/views/readItem.ejs
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/style.css" />
-    <title><%= item.item %></title>
-  </head>
-  <body>
-    <h1><%= item.item %></h1>
-    <p>Description: <%= item.description %></p>
-    <p>Manufacturer: <%= manufacturer.manufacturer %></p>
-    <p>Price: <%= item.price %></p>
-    <p>Quantity In Stock: <%= item.quantity %></p>
-    <a href="/items/<%= item.id %>/update">Edit</a>
-    <a href="/items/<%= item.id %>/delete">Delete</a>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="/style.css" />
+  <title><%= item.item %></title>
+</head>
+
+<body>
+  <h1><%= item.item %></h1>
+  <p>Description: <%= item.description %></p>
+  <p>Manufacturer: <%= manufacturer.manufacturer %></p>
+  <p>Price: <%= item.price %></p>
+  <p>Quantity In Stock: <%= item.quantity %></p>
+  <a href="/items/<%= item.id %>/update">Edit</a>
+  <form action="/items/<%= item.id %>/delete" method="POST" style="display: inline;">
+    <button type="submit" onclick="return confirm('Are you sure you want to delete this item?')">
+      Delete
+    </button>
+  </form>
+</body>
+
 </html>
