--- a/views/createItem.ejs
+++ b/views/createItem.ejs
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <h1><%= title %></h1>
+  <%- include("partials/header.ejs") %>
+  <h2><%= title %></h2>
   <%- include('partials/errors.ejs') %>
   <form action="/items/create" method="POST">
     <div>
