--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/style.css" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <a href="/categories">All Categories</a>
-    <a href="/items">All Items</a>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="/style.css" />
+  <title><%= title %></title>
+</head>
+
+<body>
+  <%- include("partials/header.ejs") %>
+  <h2><%= title %></h2>
+  <a href="/categories">All Categories</a>
+  <a href="/items">All Items</a>
+</body>
+
 </html>
