--- a/views/listCategories.ejs
+++ b/views/listCategories.ejs
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/style.css" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <ul>
-      <% categories.forEach(category => { %>
-      <li>
-        <a href="/categories/<%= category.id %>"><%= category.category %></a>
-      </li>
-      <% }) %>
-    </ul>
-    <a href="/categories/create">Add a new category</a>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="/style.css" />
+  <title><%= title %></title>
+</head>
+
+<body>
+  <%- include("partials/header.ejs") %>
+  <h2><%= title %></h2>
+  <ul>
+    <% categories.forEach(category => { %>
+    <li>
+      <a href="/categories/<%= category.id %>"><%= category.category %></a>
+    </li>
+    <% }) %>
+  </ul>
+  <a href="/categories/create">Add a new category</a>
+</body>
+
 </html>
