--- a/views/listItems.ejs
+++ b/views/listItems.ejs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/style.css" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <ul>
-      <% items.forEach(item => { %>
-      <li><a href="/items/<%= item.id %>"><%= item.item %></a></li>
-      <% }) %>
-    </ul>
-    <a href="/items/create">Add a new item</a>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="/style.css" />
+  <title><%= title %></title>
+</head>
+
+<body>
+  <%- include("partials/header.ejs") %>
+  <h2><%= title %></h2>
+  <ul>
+    <% items.forEach(item => { %>
+    <li><a href="/items/<%= item.id %>"><%= item.item %></a></li>
+    <% }) %>
+  </ul>
+  <a href="/items/create">Add a new item</a>
+</body>
+
 </html>
