--- a/views/readCategory.ejs
+++ b/views/readCategory.ejs
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <h1><%= category.category %></h1>
+  <%- include("partials/header.ejs") %>
+  <h2><%= category.category %></h2>
   <ul>
     <% items.forEach(item => { %>
     <li>
