--- a/views/readItem.ejs
+++ b/views/readItem.ejs
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <h1><%= item.item %></h1>
+  <%- include("partials/header.ejs") %>
+  <h2><%= item.item %></h2>
   <p>Description: <%= item.description %></p>
   <p>Manufacturer: <%= manufacturer.manufacturer %></p>
   <p>Price: <%= item.price %></p>
