--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,9 +3,10 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/categories">All Categories</a></li>
-      <li><a href="/items">All Items</a></li>
+      <li><a href="/categories">Categories</a></li>
+      <li><a href="/items">Items</a></li>
       <li><a href="/categories/create">Add Category</a></li>
+      <li><a href="/manufacturers/create">Add Manufacturer</a></li>
       <li><a href="/items/create">Add Item</a></li>
     </ul>
   </nav>
