--- a/views/readCategory.ejs
+++ b/views/readCategory.ejs
@@ -8,7 +8,10 @@
 
 <body>
   <%- include("partials/header.ejs") %>
-  <h2><%= category.category %></h2>
+  <h2>Category: <%= category.category %></h2>
+  <a href="/categories/<%= category.id %>/update">Edit</a>
+  <a href="/categories/<%= category.id %>/delete">Delete</a>
+  <h3>Items</h3>
   <ul>
     <% items.forEach(item => { %>
     <li>
@@ -16,10 +19,6 @@
     </li>
     <% }) %>
   </ul>
-  <a href="/categories/<%= category.id %>/update">Edit</a>
-  <form action="/categories/<%= category.id %>/delete" method="POST" style="display: inline;">
-    <button type="submit" onclick="return confirm('Are you sure you want to delete this category?')">Delete</button>
-  </form>
 </body>
 
 </html>
