--- a/views/readItem.ejs
+++ b/views/readItem.ejs
@@ -18,11 +18,7 @@
   <p>Price: <%= item.price %></p>
   <p>Quantity In Stock: <%= item.quantity %></p>
   <a href="/items/<%= item.id %>/update">Edit</a>
-  <form action="/items/<%= item.id %>/delete" method="POST" style="display: inline;">
-    <button type="submit" onclick="return confirm('Are you sure you want to delete this item?')">
-      Delete
-    </button>
-  </form>
+  <a href="/items/<%= item.id %>/delete">Delete</a>
 </body>
 
 </html>
