--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,10 @@
 
 <body>
   <%- include("partials/header.ejs") %>
-  <h2><%= title %></h2>
-  <a href="/categories">All Categories</a>
-  <a href="/items">All Items</a>
+  <main>
+    <h2><%= title %></h2>
+    <p>Welcome to the outdoor gear inventory management system! Start by viewing all <a href="/categories">categories</a> or all <a href="/items">items</a>.</p>
+  </main>
 </body>
 
 </html>
