--- a/views/createCategory.ejs
+++ b/views/createCategory.ejs
@@ -8,16 +8,18 @@
 
 <body>
   <%- include("partials/header.ejs") %>
-  <h2><%= title %></h2>
-  <%- include('partials/errors.ejs') %>
-  <form action="/categories/create" method="POST">
-    <div>
-      <label for="name">Name:</label>
-      <input type="text" name="name" id="name" required />
-    </div>
-    <button type="submit">Submit</button>
-  </form>
-  <a href="/">Back to home</a>
+  <main>
+    <h2><%= title %></h2>
+    <%- include('partials/errors.ejs') %>
+    <form action="/categories/create" method="POST">
+      <div>
+        <label for="name">Category:</label>
+        <input type="text" name="name" id="name" required />
+      </div>
+      <button type="submit">Submit</button>
+    </form>
+    <a href="/">Back to home</a>
+  </main>
 </body>
 
 </html>
