--- a/views/createItem.ejs
+++ b/views/createItem.ejs
@@ -8,47 +8,49 @@
 
 <body>
   <%- include("partials/header.ejs") %>
-  <h2><%= title %></h2>
-  <%- include('partials/errors.ejs') %>
-  <form action="/items/create" method="POST">
-    <div>
-      <label for="name">Name:</label>
-      <input type="text" name="name" id="name" required />
-    </div>
-    <div>
-      <label for="description">Description:</label>
-      <textarea name="description" id="description" required></textarea>
-    </div>
-    <div>
-      <label for="manufacturer">Manufacturer:</label>
-      <select name="manufacturer" id="manufacturer" required>
-        <% manufacturers.forEach( manufacturer => { %>
-        <option value="<%= manufacturer.id %>">
-          <%= manufacturer.manufacturer %>
-        </option>
-        <% }) %>
-      </select>
-    </div>
-    <fieldset>
-      <legend>Categories:</legend>
-      <% categories.forEach( category => { %>
+  <main>
+    <h2><%= title %></h2>
+    <%- include('partials/errors.ejs') %>
+    <form action="/items/create" method="POST">
       <div>
-        <input type="checkbox" name="category_<%= category.id %>" id="category_<%= category.id %>" />
-        <label for="category_<%= category.id %>"><%= category.category %></label>
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" required />
       </div>
-      <% }) %>
-    </fieldset>
-    <div>
-      <label for="price">Price:</label>
-      <input type="number" name="price" id="price" required />
-    </div>
-    <div>
-      <label for="quantity">Quantity:</label>
-      <input type="number" name="quantity" id="quantity" required />
-    </div>
-    <button type="submit">Submit</button>
-  </form>
-  <a href="/">Back to home</a>
+      <div>
+        <label for="description">Description:</label>
+        <textarea name="description" id="description" required></textarea>
+      </div>
+      <div>
+        <label for="manufacturer">Manufacturer:</label>
+        <select name="manufacturer" id="manufacturer" required>
+          <% manufacturers.forEach( manufacturer => { %>
+          <option value="<%= manufacturer.id %>">
+            <%= manufacturer.manufacturer %>
+          </option>
+          <% }) %>
+        </select>
+      </div>
+      <div>
+        <label for="price">Price:</label>
+        <input type="number" name="price" id="price" required />
+      </div>
+      <div>
+        <label for="quantity">Quantity:</label>
+        <input type="number" name="quantity" id="quantity" required />
+      </div>
+      <fieldset>
+        <legend>Categories:</legend>
+        <% categories.forEach( category => { %>
+        <div>
+          <input type="checkbox" name="category_<%= category.id %>" id="category_<%= category.id %>" />
+          <label for="category_<%= category.id %>"><%= category.category %></label>
+        </div>
+        <% }) %>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
+    <a href="/">Back to home</a>
+  </main>
 </body>
 
 </html>
