--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <h1>Outdoors Gear Inventory Management</h1>
+  <h1>Outdoor Gear Inventory Management</h1>
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
