--- a/views/readItem.ejs
+++ b/views/readItem.ejs
@@ -8,17 +8,21 @@
 
 <body>
   <%- include("partials/header.ejs") %>
-  <h2><%= item.item %></h2>
-  <p>Description: <%= item.description %></p>
-  <p>Manufacturer: <%= manufacturer.manufacturer %></p>
-  <p>Categories: <% categories.forEach(category=>{ %>
-    <a href="/categories/<%= category.id %>"><%= category.category %></a>
-    <% }) %>
-  </p>
-  <p>Price: <%= item.price %></p>
-  <p>Quantity In Stock: <%= item.quantity %></p>
-  <a href="/items/<%= item.id %>/update">Edit</a>
-  <a href="/items/<%= item.id %>/delete">Delete</a>
+  <main>
+    <h2><%= item.item %></h2>
+    <p>Description: <%= item.description %></p>
+    <p>Manufacturer: <%= manufacturer.manufacturer %></p>
+    <p>Categories: <% categories.forEach(category=>{ %>
+      <a href="/categories/<%= category.id %>"><%= category.category %></a>
+      <% }) %>
+    </p>
+    <p>Price: <%= item.price %></p>
+    <p>Quantity In Stock: <%= item.quantity %></p>
+    <div>
+      <a href="/items/<%= item.id %>/update">Edit</a>
+      <a href="/items/<%= item.id %>/delete">Delete</a>
+    </div>
+  </main>
 </body>
 
 </html>
